# bobby

./: .gitignore  CMakeLists.txt  CombinerAlignment.h  Makefile  SplatPool.cpp  SplatPool.h  bobby.cpp  main.cpp  splats.cpp  splats.h  types.h  utils.cpp  utils.h
include/: types.h
src/: main.cpp
tclap/: StdOutput.h
test/: splats.splat  test.py  test.sh
